<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:padding="16dp"
    android:background="@drawable/gradient_background">

    <!-- Header Section -->
    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="120dp">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:layout_marginBottom="20dp"
            android:src="@drawable/logo"
            android:layout_gravity="center"
            android:contentDescription="@string/logo_content_description" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cyrine_acedera"
            android:textSize="40sp"
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="@color/black"
            android:fontFamily="sans-serif-condensed" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/network_security_manager"
            android:textSize="24sp"
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="@color/black"
            android:fontFamily="sans-serif-condensed" />

    </LinearLayout>

    <!-- Contact Information Section -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/header"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="150dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/baseline_mail_outline_24"
                android:contentDescription="@string/email_icon_content_description" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email_address"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:fontFamily="sans-serif-condensed"
                android:layout_marginStart="10dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="10dp">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/baseline_local_phone_24"
                android:contentDescription="@string/phone_icon_content_description" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone_number"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:fontFamily="sans-serif-condensed"
                android:layout_marginStart="10dp" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>